add refresh request and mainScreen
